--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,8 +12,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: cachix/install-nix-action@v22
+      - uses: cachix/install-nix-action@v23
         with:
+          install_url: https://releases.nixos.org/nix/nix-2.19.0/install
           nix_path: nixpkgs=channel:nixos-unstable
       - run: nix-build nix/cross-image.nix
       - run: docker images
