--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,6 +16,5 @@ jobs:
         with:
           install_url: https://releases.nixos.org/nix/nix-2.19.0/install
           nix_path: nixpkgs=channel:nixos-unstable
-      - run: nix-build nix/cross-image.nix
-      - run: docker load < result
+      - run: docker load < $(nix-build nix/cross-image.nix)
       - run: docker images
