--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,5 +16,6 @@ jobs:
         with:
           install_url: https://releases.nixos.org/nix/nix-2.19.0/install
           nix_path: nixpkgs=channel:nixos-unstable
-      - run: docker load < $(nix-build nix/cross-image.nix)
+      - run: nix-build nix/cross-image.nix
+      - run: docker load < result
       - run: docker images
