--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,7 +27,7 @@ jobs:
           install_url: https://releases.nixos.org/nix/nix-2.19.0/install
           nix_path: nixpkgs=channel:nixos-unstable
       - run: |
-          nix-build nix/cross-image.nix \
+          nix-build nix/cross-image.nix -A cross \
             --argstr dockerArch ${{ matrix.dockerArch }} \
             --argstr sysArch ${{ matrix.sysArch }} \
             --argstr crossArch ${{ matrix.crossArch }}
