--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,12 +13,15 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          # - dockerArch: "amd64"
-          #   sysArch: "x86_64-linux"
-          #   crossArch: "aarch64-unknown-linux-gnu"
+          - dockerArch: "amd64"
+            sysArch: "x86_64-linux"
+            crossArch: "aarch64-unknown-linux-gnu"
           - dockerArch: "amd64"
             sysArch: "x86_64-linux"
             crossArch: "x86_64-unknown-linux-gnu"
+          - dockerArch: "arm64"
+            sysArch: "aarch64-linux"
+            crossArch: "aarch64-unknown-linux-gnu"
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
